@@ -7,6 +7,7 @@ pts_Graph: Add histogram type
 phodevi: CPU core name / family detection to friendly strings (OpenBenchmarking.org driven)
 phodevi: Report core name via system-info command
 phodevi: Various storage HDD/SSD detection reporting improvements
+phodevi: Ampere Altra detection
 
 Phoronix Test Suite 9.8.0
 9 July 2020
